# nukitally

./: .gitignore  Cargo.toml  README.Md  bot.py  requirements.txt
migrations/: 20230331103613_initial.sql
src/: main.rs
src/commands/: mod.rs  nuki.rs
